# process-tool

./: .gitignore  index.html  package-lock.json  package.json
src/: App.svelte  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/css/: layout.css
src/lib/: EntityCard.svelte  EntityList.svelte  EntitySpace.svelte  GraphViewer.svelte  JsonViewer.svelte  PluginCard.svelte  PluginList.svelte  PluginSpace.svelte  Tab1.svelte  Tab2.svelte  Tab3.svelte  Tabs.svelte  WorkSpace.svelte
