[package]
name = "process-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["Johannes Herforth"]
license = "GNU General Public License v3.0"
repository = "https://github.com/DerAndereJohannes/process-tool"
default-run = "process-tool"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all"] }
pmrs = { version = "0.0.1" }
strum = { version = "0.24", features = ["derive"] }
polars = { version = "0.22", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
